# algorithm_comparison_project

./: .gitignore  CHANGELOG.md  CHART_OPTIMIZATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  chart_optimization_demo.py  diagnostic_test.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_fixed.bat  run_optimized.bat  simple_test.py  test_chart_optimization.py  test_enhanced_single.py
config/: algorithm_data.py  chart_config.py
docs/: technical_docs.md  user_guide.md
src/: __init__.py  chart_generator.py  data_manager.py  enhanced_chart_generator.py  enhanced_chart_generator_new.py  enhanced_chart_generator_old.py  font_manager.py  main.py  optimized_main.py  simplified_main.py  utils.py
src/data/: algorithms.csv
tests/: test_main.py
